--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "^9.27.1",
     "@trpc/react": "^9.27.1",
     "@trpc/server": "^9.27.1",
+    "dayjs": "^1.11.5",
     "nanoid": "^4.0.0",
     "next": "12.2.5",
     "react": "18.2.0",
