--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev:ws": "ts-node-dev --transpile-only --project tsconfig.server.json server/wsDevServer.ts",
+    "dev:next": "next dev",
+    "dev": "run-p dev:*",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -25,18 +27,22 @@
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "superjson": "^1.9.1",
+    "ws": "^8.8.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "18.7.8",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
     "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
+    "ts-node-dev": "^2.0.0",
     "typescript": "4.7.4"
   }
 }
