--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev:ws": "ts-node-dev --transpile-only --project tsconfig.server.json server/wsDevServer.ts",
     "dev:next": "next dev",
     "dev": "run-p dev:*",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "build:1-generate": "prisma generate",
+    "build:2-next": "NODE_ENV=production next build",
+    "build:3-server": "NODE_ENV=production tsc --project tsconfig.server.json",
+    "build": "run-s build:*",
+    "start": "ts-node dist/server/prodServer.js",
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.7",
@@ -42,6 +44,7 @@
     "postcss": "^8.4.16",
     "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.7.4"
   }
