--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -7,7 +7,6 @@
     "lib": ["ES2019", "DOM"],
     "isolatedModules": false,
     "noEmit": false,
-    "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
