--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev:ws": "ts-node-dev --transpile-only --project tsconfig.server.json server/wsDevServer.ts",
-    "dev:next": "next dev",
-    "dev": "run-p dev:*",
-    "build:1-generate": "prisma generate",
-    "build:2-next": "NODE_ENV=production next build",
-    "build:3-server": "NODE_ENV=production tsc --project tsconfig.server.json",
-    "build": "run-s build:*",
+    "dev": "next dev",
+    "build": "next build",
     "start": "ts-node dist/server/prodServer.js",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.7",
@@ -23,20 +19,21 @@
     "dayjs": "^1.11.5",
     "nanoid": "^4.0.0",
     "next": "12.2.5",
+    "pusher": "^5.1.1-beta",
+    "pusher-js": "^7.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "superjson": "^1.9.1",
-    "ws": "^8.8.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "18.7.8",
+    "@types/pusher-js": "^5.1.0",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
-    "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
@@ -44,8 +41,6 @@
     "postcss": "^8.4.16",
     "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
     "typescript": "4.7.4"
   }
 }
